--- a/client/src/style/RegistFull.css
+++ b/client/src/style/RegistFull.css
@@ -2,7 +2,7 @@ body {
     background-color: #D4D4D4;
 }
 
-.FullPage {
+.fullPage {
     display: block;
     width: 100%;
     height: 41rem;
